Add working conversion test and validate Data paths against format as well as Value type against the actual object