@@ -4,6 +4,7 @@ import de.konni.msg.dataformats.core.mappings.FirstSimpleMapping;
 import de.konni.msg.dataformats.core.mappings.MultipleOneToOneMapping;
 import org.junit.jupiter.api.Test;
 
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -15,13 +16,11 @@ class MappingTest {
 
         var value = new Value(new Path("benutzername"), Type.STRING, "xxx");
         var before = new Data(TestDataFormats.transactionMetadataUpdate(), List.of(value));
-
-        var otherValue = new Value(new Path("ignore me"), Type.STRING, "xxx");
-        var after = new Data(TestDataFormats.transactionMetadataUpdateTarget(), List.of(otherValue));
+        var after = new Data(TestDataFormats.transactionMetadataUpdateTarget(), Collections.emptyList());
 
         mapping.applyTo(before, after);
 
-        assertEquals(new Value(new Path("benutzernamePath"), Type.STRING, "XXX"), after.get(new Path("benutzernamePath")));
+        assertEquals(new Value(new Path("user"), Type.STRING, "XXX"), after.get(new Path("user")));
     }
 
     @Test
@@ -33,13 +32,11 @@ class MappingTest {
                 new Value(new Path("institutsname"), Type.STRING, "xxx")
         );
         var before = new Data(TestDataFormats.transactionMetadataUpdate(), values);
-
-        var otherValue = new Value(new Path("ignore me"), Type.STRING, "xxx");
-        var after = new Data(TestDataFormats.transactionMetadataUpdateTarget(), List.of(otherValue));
+        var after = new Data(TestDataFormats.transactionMetadataUpdateTarget(), Collections.emptyList());
 
         mapping.applyTo(before, after);
 
-        assertEquals(new Value(new Path("benutzernamePath"), Type.STRING, "XXX"), after.get(new Path("benutzernamePath")));
-        assertEquals(new Value(new Path("institutsnamePath"), Type.STRING, "XXX"), after.get(new Path("institutsnamePath")));
+        assertEquals(new Value(new Path("user"), Type.STRING, "XXX"), after.get(new Path("user")));
+        assertEquals(new Value(new Path("tenant"), Type.STRING, "XXX"), after.get(new Path("tenant")));
     }
 }
